--- a/hackathon/templates/drafting.html
+++ b/hackathon/templates/drafting.html
@@ -12,13 +12,14 @@
 		<div id="images"></div> -->
 		<div id="editor-cont">
 			<h1 style="font-size: 30px">Create post</h1>
-			<p>Use double brackets @email to generate images of you or someone else doing what you're describing. Eg @youremail running a marathon.
+			<p>Use double brackets @email to generate images of you or someone else doing what you're describing. Eg @youremail running a marathon. All markdown features are supported.
+			<br><br>
 			<div id="editor"></div>
 			<input type="submit" id="submit">
 		</div>
 		<div id="images">
 			<h1>Images</h1>
-			<a style="display: none" class="button is-loading">Loading</a>
+			<span style="display: none !important; margin: 30px auto; display: block; width: 50px; height: 50px;" id="loading" class="loader"></a>
 		</div>
 
 		<div id="svelte"></div>
