--- a/hackathon/templates/base.html
+++ b/hackathon/templates/base.html
@@ -15,7 +15,7 @@
 <body>
     <nav class="navbar" role="navigation" aria-label="main navigation">
         <div class="navbar-brand">
-            <h1 class="title"><a class="navbar-item" href="/">Thoughts</a></h1>
+            <h1 class="title"><a class="navbar-item" href="/">Illus</a></h1>
         </div>
         {% if logged_in %}
         <div class="navbar-menu">
