--- a/hackathon/templates/index.html
+++ b/hackathon/templates/index.html
@@ -6,7 +6,7 @@
 {% block body %}
 <div id="main">
     <div id="landing">
-        <h1>Welcome to 'thoughts'</h1>
+        <h1>Welcome to Illus</h1>
         <p>A place for you to gather on your day and see what your friends are up to through text updates with auto-generated captions and animated characters.</p>
 		<p>Login with your <a href="https://vana.com" target="_blank"><img src="{{ url_for('static', filename='Vana_Favicon_32x32.png') }} " id="vanaIcon"> Vana</a> account:</p>
 		<br>
@@ -15,6 +15,7 @@
                 <input class="input" type="email" id="email" placeholder="Email">
             </div>
         </form>
+		<br>
         <form id="submitCode" hidden>
             <div class="control">
                 <input class="input" type="text" id="code" placeholder="Code">
