improve api (mainly caching)

--- a/hackathon/templates/drafting.html
+++ b/hackathon/templates/drafting.html
@@ -19,7 +19,7 @@
 		</div>
 		<div id="images">
 			<h1>Images</h1>
-			<span style="display: none !important; margin: 30px auto; display: block; width: 50px; height: 50px;" id="loading" class="loader"></a>
+			<span style="display: none !important; margin: 30px auto; display: block; width: 50px; height: 50px;" id="loading" class="loader"></span>
 		</div>
 
 		<div id="svelte"></div>
