--- a/hackathon/templates/drafting.html
+++ b/hackathon/templates/drafting.html
@@ -12,10 +12,11 @@
 		<div id="images"></div> -->
 		<div id="editor-cont">
 			<h1 style="font-size: 30px">Create post</h1>
-			<p>Use double brackets @email to generate images of you or someone else doing what you're describing. Eg @youremail running a marathon. All markdown features are supported.
+			<p>Use the following syntax to generate images of you or someone else doing what you're describing: <code>[[@email doing X]]</code>. All markdown features are supported. You can specify a type of style and also animate your friends.
 			<br><br>
 			<div id="editor"></div>
-			<input type="submit" id="submit">
+			<br>
+			<input type="submit" id="submit" class="button" value="Submit post">
 		</div>
 		<div id="images">
 			<h1>Images</h1>
