--- a/hackathon/templates/base.html
+++ b/hackathon/templates/base.html
@@ -28,6 +28,16 @@
                 </a>
             </div>
             <div class="navbar-end">
+                <form class="navbar-item" method="GET" action="/search">
+                    <div class="field has-addons">
+                        <div class="control">
+                            <input type="text" placeholder="Search for a user" class="input">
+                        </div>
+                        <div class="control">
+                            <a class="button is-info">Search</a>
+                        </div>
+                    </div>
+                </form>
                 <a href="/profile" class="navbar-item">
                     <button class="button">
                         Profile
