--- a/hackathon/templates/base.html
+++ b/hackathon/templates/base.html
@@ -31,7 +31,7 @@
                 <form class="navbar-item" method="GET" action="/search">
                     <div class="field has-addons">
                         <div class="control">
-                            <input type="text" placeholder="Search for a user" class="input">
+                            <input name="search" type="text" placeholder="Search for a user" class="input">
                         </div>
                         <div class="control">
                             <a class="button is-info">Search</a>
