--- a/hackathon/templates/base.html
+++ b/hackathon/templates/base.html
@@ -34,7 +34,7 @@
                             <input name="search" type="text" placeholder="Search for a user" class="input">
                         </div>
                         <div class="control">
-                            <a class="button is-info">Search</a>
+                            <input type="submit" value="Search" class="button is-info">
                         </div>
                     </div>
                 </form>
