use gpt for prompts

--- a/hackathon/templates/drafting.html
+++ b/hackathon/templates/drafting.html
@@ -14,6 +14,7 @@
 			<br><br>
 			<div id="editor"></div>
             <br>
+			<button id="gpt" class="button">Generate Captions</button>
 			<button id="submit" class="button">Create post</button>
 		</div>
 
