add email to profile button

--- a/hackathon/templates/base.html
+++ b/hackathon/templates/base.html
@@ -40,7 +40,7 @@
                 </form>
                 <a href="/profile" class="navbar-item">
                     <button class="button">
-                        Profile
+                        Profile {{ emaillog }}
                     </button>
                 </a>
                 <a href="/disconnect" class="navbar-item">
