Fix email parsing bug

--- a/hackathon/templates/drafting.html
+++ b/hackathon/templates/drafting.html
@@ -10,7 +10,7 @@
     <div id="main" class="editor-inter">
 		<div id="editor-cont">
 			<h1 style="font-size: 30px">Create post</h1>
-			<p>Use the following syntax to generate images of you or someone else doing what you're describing: <code>[[@email doing X]]</code>. All markdown features are supported. You can specify a type of style and also animate your friends. Select images on the right.
+            <p>Use the following syntax to generate images of you or someone else doing what you're describing: <code>[[@email doing X]]</code>. All markdown features are supported. You can specify a type of style and also animate your friends. Select images on the right. E.g. <code>[[@nils@nilsand.re with his family.]]</code> (<strong>notice the leading @ sign</strong>). Also don't close the <code>]]</code> brackets until you've completed your prompt.
 			<br><br>
 			<div id="editor"></div>
             <br>
