Add clarification that people need to follow for timeline to not be empty

--- a/hackathon/templates/list_of_posts.html
+++ b/hackathon/templates/list_of_posts.html
@@ -1,5 +1,5 @@
 {% if posts | length == 0 %}
-<p>This place is weirdly empty :(</p>
+<p>This place is weirdly empty :( (make sure you're following people so that your timeline isn't empty)</p>
 {% endif %}
 
 {% for post in posts %}
